CORE-449 Publish AMQP Messages via HTTP (#729)
* CORE-449 Publish AMQP Messages via HTTP
https://ozean12.atlassian.net/browse/CORE-449

* cr fixes

* rm routes

* OA

* Increase borscht timeout

* align makefile with app skeleton and fix docker-comp. (#727)

* align makefile with app skeleton and fix docker-comp.

* fix tests

* update packages

* CORE-358 Document validation error in checkout widget docs (#726)

* CORE-358 Document validation error in checkout widget docs

* generate docs


* Improve the order container loading (#728)

* Improve the order container loading

* CS

* Spec fixes

* No ws

* Fix code style

* Add the repo

* Fix code style

* Stop behat for test

* Fixes with address

* Enable behat

* Enable behat

* Beter step in behat

* Other behat tests

* Fixes

* Two last fixes

* Bad Alex

* Remove unneeded changes

* CS

* CR

* CR2


* t

* openapi docs

* Add request body

* Change route

* revert the descriptions
